stacks/librespeed/librespeed_ingress.yaml
---
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: librespeed
  namespace: librespeed
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web

spec:
  rules:
    - host: "librespeed.example.com"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: librespeed
                port:
                  number: 80
